RESOLVED FIXED74492
[Qt] Fix compilation of QtWebKit with --orientation-events without ENABLE_DEVICE_ORIENTATION
https://bugs.webkit.org/show_bug.cgi?id=74492
Summary [Qt] Fix compilation of QtWebKit with --orientation-events without ENABLE_DEV...
Alexander Færøy
Reported 2011-12-14 01:57:58 PST
Currently QtWebKit requires ENABLE_DEVICE_ORIENTATION to be set to be able to enable --orientation-events. The upcoming patch will also clean up how QTM is being used for non-Qt5 builds.
Attachments
Patch (4.13 KB, patch)
2011-12-14 02:25 PST, Alexander Færøy
no flags
Patch (8.63 KB, patch)
2011-12-14 03:10 PST, Alexander Færøy
no flags
Alexander Færøy
Comment 1 2011-12-14 02:25:19 PST
Alexander Færøy
Comment 2 2011-12-14 03:10:49 PST
WebKit Review Bot
Comment 3 2011-12-14 03:28:14 PST
Comment on attachment 119187 [details] Patch Clearing flags on attachment: 119187 Committed r102763: <http://trac.webkit.org/changeset/102763>
WebKit Review Bot
Comment 4 2011-12-14 03:28:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.