[Qt] Fix compilation of QtWebKit with --orientation-events without ENABLE_DEVICE_ORIENTATION https://bugs.webkit.org/show_bug.cgi?id=74492

Patch by Alexander Færøy <alexander.faeroy@nokia.com> on 2011-12-14
Reviewed by Simon Hausmann.

.:

* Source/api.pri:

Source/WebKit/qt:

* Api/qwebframe.cpp:
(QWebFramePrivate::_q_orientationChanged):
* Api/qwebframe_p.h:
* WebCoreSupport/DeviceMotionProviderQt.cpp:
* WebCoreSupport/DeviceMotionProviderQt.h:
* WebCoreSupport/DeviceOrientationProviderQt.cpp:
* WebCoreSupport/DeviceOrientationProviderQt.h:

Canonical link: https://commits.webkit.org/91149@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102763 268f45cc-cd09-0410-ab3c-d52691b4dbfc