Source/WebKit/qt/Api/qwebframe_p.h
@@ -30,7 +30,7 @@
 #include "PlatformString.h"
 #if ENABLE(ORIENTATION_EVENTS)
 #include "qorientationsensor.h"
-#endif
+#endif // ENABLE(ORIENTATION_EVENTS).
 #include "qwebelement.h"
 #include "wtf/RefPtr.h"
 #include "Frame.h"
@@ -127,8 +127,12 @@ public:
 #endif
 
 #if ENABLE(ORIENTATION_EVENTS)
-    QtMobility::QOrientationSensor m_orientation;
-#endif
+#if QT_VERSION < QT_VERSION_CHECK(5, 0, 0)
+    QTM_NAMESPACE::QOrientationSensor m_orientation;
+#else
+    QOrientationSensor m_orientation;
+#endif // QT_VERSION < QT_VERSION_CHECK(5, 0, 0).
+#endif // ENABLE(ORIENTATION_EVENTS).
 
 private:
 #if USE(JSC)
