Source/WebKit/qt/WebCoreSupport/DeviceMotionProviderQt.cpp
@@ -22,6 +22,10 @@
 
 #include "DeviceOrientationProviderQt.h"
 
+#if QT_VERSION < QT_VERSION_CHECK(5, 0, 0)
+QTM_USE_NAMESPACE
+#endif
+
 namespace WebCore {
 
 DeviceMotionProviderQt::DeviceMotionProviderQt()
