Source/WebKit/qt/WebCoreSupport/DeviceOrientationProviderQt.h
@@ -26,18 +26,25 @@
 
 #include <QRotationFilter>
 
-#if QT_VERSION < QT_VERSION_CHECK(5, 0, 0)
-QTM_USE_NAMESPACE
-#endif
-
 namespace WebCore {
 
-class DeviceOrientationProviderQt : public QRotationFilter {
+class DeviceOrientationProviderQt
+#if QT_VERSION < QT_VERSION_CHECK(5, 0, 0)
+    : public QTM_NAMESPACE::QRotationFilter {
+#else
+    : public QRotationFilter {
+#endif
 public:
     DeviceOrientationProviderQt();
 
     void setController(DeviceOrientationController*);
+
+#if QT_VERSION < QT_VERSION_CHECK(5, 0, 0)
+    bool filter(QTM_NAMESPACE::QRotationReading*);
+#else
     bool filter(QRotationReading*);
+#endif
+
     void start();
     void stop();
     bool isActive() const { return m_sensor.isActive(); }
@@ -47,7 +54,11 @@ public:
 private:
     RefPtr<DeviceOrientation> m_lastOrientation;
     DeviceOrientationController* m_controller;
+#if QT_VERSION < QT_VERSION_CHECK(5, 0, 0)
+    QTM_NAMESPACE::QRotationSensor m_sensor;
+#else
     QRotationSensor m_sensor;
+#endif
 };
 
 }
